# flink-autoscaling

./: .gitignore  .gitmodules  README.md  flink-conf.yaml  instructions.md
analysis/: init_experiments.csv
benchmark/justin-autoscaler/: xp.ipynb
benchmark/managed-mem-sensitivity/: run_managed_mem_sensitivity.sh  test_fetch_async_profile.sh
benchmark/mrc-gen/: run_block_cache_sweep.sh  run_query_sweep.sh
benchmark/offline-mrc-gen/: .gitignore  README.md  env.local.example.sh  env.sh  prepare_traces.sh  run_shards.sh
benchmark/online-mrc/: .gitignore  README.md  env.sh  gen_ground_truth_mrc.sh  gen_gt_snapshots.sh  run_bench.sh  run_overhead_exp.sh
benchmark/query-runner-v2/: run_paper_q20_sweep.sh  run_paper_q7_sweep.sh  run_paper_q9_sweep.sh  run_paper_q9_watermark_alignment_sweep.sh  run_query_runner_v2_sweep.sh  run_sweep_archive.sh
benchmark/query-runner-v2-savepoint/: run_query_runner_v2_savepoint_sweep.sh
benchmark/query-runner-v3-savepoint/: run_query_runner_v3_savepoint_sweep.sh
benchmark/validate_nexmark_query_semantics/: explain_q20_plans.sh  (+2 more)
justin-custom-flink/: Dockerfile
monitoring/: README.md
online_mrc/src/mrc/: meson.build
rocksdb-flink-stats-viewer/: README.md  app.py
rocksdb-flink-stats-viewer-v2/: README.md  app.py
scripts/: apply_flink_config.sh  build_flink_1-20_src.sh  build_frocksdb.sh  build_nexmark.sh  build_nexmark_v2.sh  build_rocksdb_options.sh  env.sh  run_nexmark_query.sh  run_nexmark_sql_query_test.sh  setup_custom_flink_runtime.sh  setup_stable_flink_runtime.sh  start_cluster.sh  stop_cluster.sh  sync_cluster.sh
(+105 files in other folders)
